--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -25,7 +25,7 @@ jobs:
           push: true
           tags: remote-dev/osdk-ansible-vscode:latest
           context: v1.18.1
-          file: ../{context}/Dockerfile
+          file: ./Dockerfile
           build-args: |
              OPERATOR_SDK_VERSION=1.18.1
            
