--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -8,7 +8,9 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    steps:   
+    steps:
+      - uses: actions/checkout@v3   
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
