--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -5,15 +5,23 @@ on:
     branches:
       - 'main'
 
+env:
+  REGISTRY: quay.io
+  OSDK_VERSION: 1.18.1
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3   
-      
+      - name: Checkout repository
+        uses: actions/checkout@v3   
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
+      - name: Check ENV variables
+        run: env
+
       - name: Login to Registry
         uses: docker/login-action@v2
         with:
@@ -21,17 +29,14 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_TOKEN }}
 
-      - name: Some checks
-        run: ls -la ./ && ls -la $GITHUB_WORKSPACE
-
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: quay.io/remote-dev/osdk-ansible-vscode:latest
-          context: ./v1.18.1
+          context: ./v${{ env.OSDK_VERSION }}
           file: ./Dockerfile
           build-args: |
-             OPERATOR_SDK_VERSION=1.18.1
+             OPERATOR_SDK_VERSION=${{ env.OSDK_VERSION }}
            
            
