--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -1,13 +1,26 @@
 name: build-image
 
 on:
-  push:
-    branches:
-      - 'main'
-
+  workflow_call:
+    inputs:
+      osdk_version:
+        required: true
+        type: string
+    
+    registry:
+      type: string
+      required: true
+    
+    secrets:
+      REGISTRY_USERNAME:
+        required: true
+    
+      REGISTRY_TOKEN:
+        required: true
+    
 env:
-  REGISTRY: quay.io
-  OSDK_VERSION: 1.18.1
+  REGISTRY: ${{ inputs.registry }}
+  OSDK_VERSION: ${{ inputs.osdk_version }}
 
 jobs:
   docker:
@@ -19,9 +32,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Check ENV variables
-        run: env
-
       - name: Login to Registry
         uses: docker/login-action@v2
         with:
@@ -34,9 +44,9 @@ jobs:
         with:
           push: true
           tags: quay.io/remote-dev/osdk-ansible-vscode:latest
-          context: ./v${{ env.OSDK_VERSION }}
+          context: ./v${{ inputs.osdk_version }}
           file: ./Dockerfile
           build-args: |
-             OPERATOR_SDK_VERSION=${{ env.OSDK_VERSION }}
+             OPERATOR_SDK_VERSION=${{ inputs.osdk_version }}
            
            
